tests/golden/type_errors/struct_constructor_missing_field.cd
struct Person { name: string, age: number }
let p = Person { name: "Ada" };
